feat: enhance product management and authentication system
Backend:
- feat: update AuthController with improved authentication handling
- feat: enhance ProductController with better product management
- refactor: improve CORS configuration for better security
- feat: update SecurityConfig with enhanced security measures
- refactor: improve User model structure
- feat: enhance ProductService functionality

Frontend:
- refactor: update axios configuration for better API handling
- feat: enhance AuthProvider with improved authentication flow
- refactor: restructure product components architecture
- feat: improve donation pages functionality
- feat: enhance registration page
- refactor: remove deprecated ProductDetails and productAPI components
- feat: add new product management components